fixed bugs on mobile + set up stars part

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,30 +1,59 @@
 .slider {
   position: relative;
-  width: 1240px;
-  height: 415px;
+  /* width: 1240px;
+  height: 415px; */
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
 }
+.photo {
+  width: 1240px;
+  height: 415px;
+  border-radius: 25px;
+  object-fit: cover;
+}
+
+.arrows {
+  width: 100%;
+  position: absolute;
+  top: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .arrowLeft {
   position: absolute;
-  cursor: pointer;
-  top: 50% - 40px;
+  /* top: 50% - 40px; */
   left: 25px;
+  cursor: pointer;
   z-index: 10;
 }
 
 .arrowRight {
-  top: 50% - 40px;
-  cursor: pointer;
-  right: 25px;
   position: absolute;
+  /* top: 50% - 40px; */
+  right: 25px;
+  cursor: pointer;
   z-index: 10;
 }
+
 .photo {
-  width: 1240px;
-  height: 415px;
-  object-fit: cover;
-  border-radius: 25px;
+  width: 100%;
+  height: 255px;
+  border-radius: 10px;
+}
+.arrows {
+  top: 45%;
+}
+.arrowLeft,
+.arrowRight {
+  width: 12px;
+  height: 20px;
+}
+.arrowLeft {
+  left: 5px;
+}
+.arrowRight {
+  right: 5px;
 }
