--- a/src/style/StayDetails.css
+++ b/src/style/StayDetails.css
@@ -27,17 +27,17 @@ h6 {
   grid-template-columns: repeat(2, 1fr);
 }
 .accomodationDetails {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
   margin: 50px 0 0 0;
 }
-/* .hostCardId {
+.hostCardId {
   display: flex;
   justify-content: space-between;
   align-items: right;
   flex-direction: column;
   padding-bottom: 25px;
-} */
+}
 
 .accomodationDetails img {
   object-fit: cover;
@@ -47,10 +47,13 @@ h6 {
 }
 .tagsSection {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 10px;
 }
 .hostListing {
   display: flex;
-
+  justify-content: flex-end;
   align-items: center;
   margin-bottom: 25px;
 }
@@ -65,14 +68,14 @@ ul {
   }
   h5 {
     font-size: 12px;
-    /* padding-left: 100px; */
+    padding-left: 100px;
   }
   h6 {
     font-size: 14px;
     margin: 5px 0;
   }
   .accomodationDetails {
-    flex-direction: column;
+    grid-template-columns: 1fr;
     margin: 20px 0 0 0;
   }
 
@@ -82,7 +85,7 @@ ul {
   }
   .hostCardId {
     width: 100%;
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
